fix: the picture alignment bug and the button bug
Make the buttons and picture alignment

--- a/client/src/main/resources/CSS/RoomSelection.css
+++ b/client/src/main/resources/CSS/RoomSelection.css
@@ -57,3 +57,6 @@
     -fx-fill: transparent;
     -fx-indeterminate-bar-length: 0px;
 }
+.table-view .table-row-cell{
+
+}
